connected addition pages

--- a/menu.html
+++ b/menu.html
@@ -28,10 +28,10 @@
                             <a class="nav-link" href="menu.html"><strong>Menu</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><strong>About</strong></a>
+                            <a class="nav-link" href="about.html"><strong>About</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><strong>Contact</strong></a>
+                            <a class="nav-link" href="contact.html"><strong>Contact</strong></a>
                         </li>
                         </ul>
                     </div>
